tests/baselines/reference/parser_continueNotInIterationStatement1.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement1.ts(1,1): error TS1105: A 'continue' statement can only be used within an enclosing iteration statement.


==== tests/cases/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement1.ts (1 errors) ====
    continue;
    ~~~~~~~~~
!!! error TS1105: A 'continue' statement can only be used within an enclosing iteration statement.